[package]
name = "file_indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "indexer_manager"
path = "src/bin/indexer_manager.rs"

[[bin]]
name = "indexer_worker"
path = "src/bin/indexer_worker.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }